[tool.poetry]
name = "tablepy-lib"
version = "0.5.0"
description = "This is a versatile and user-friendly Python table library that can quickly render any Dictionary{key, []} or DataFrame into a visually appealing markdown or sql insert"
authors = ["Jordi Corbilla <jordi.coll.corbilla@gmail.com>"]
readme = "README.md"
packages = [{include = "tablepy_lib"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
